# iam

./: .gitignore  Cargo.toml  Makefile
data_downloader/: Cargo.toml
data_downloader/src/: error.rs  interval.rs  kline.rs  lib.rs  util.rs
ipc_messager/: Cargo.toml
ipc_messager/src/: fifo.rs  lib.rs  message.rs
manager/: Cargo.toml
manager/src/: main.rs
