[package]
name = "manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
data_downloader = { path = "../data_downloader" }
ipc_messager = { path = "../ipc_messager" }
tracing-subscriber = { version = "0.3.18", features = ['env-filter'] }